@@ -2748,7 +2748,7 @@ void Document::removeMarkers(Node *node, unsigned startOffset, int length, Docum
     bool docDirty = false;
     unsigned endOffset = startOffset + length - 1;
     Vector<DocumentMarker>::iterator it;
-    for (it = markers->begin(); it != markers->end();) {
+    for (it = markers->begin(); it < markers->end(); it++) {
         DocumentMarker marker = *it;
 
         // markers are returned in order, so stop if we are now past the specified range
@@ -2756,10 +2756,8 @@ void Document::removeMarkers(Node *node, unsigned startOffset, int length, Docum
             break;
         
         // skip marker that is wrong type or before target
-        if (marker.endOffset < startOffset || (marker.type != markerType && markerType != DocumentMarker::AllMarkers)) {
-            it++;
+        if (marker.endOffset < startOffset || (marker.type != markerType && markerType != DocumentMarker::AllMarkers))
             continue;
-        }
 
         // at this point we know that marker and target intersect in some way
         docDirty = true;
@@ -2769,8 +2767,8 @@ void Document::removeMarkers(Node *node, unsigned startOffset, int length, Docum
         // it now points to the next node
         
         // add either of the resulting slices that are left after removing target
-        // NOTE: This adds to the list we are iterating!  That is OK regardless of
-        // whether the iterator sees the new node, since the new node is a keeper.
+        // NOTE: This adds to the list we are iterating, but that is OK because
+        // the iteration will skip over the added node.
         if (startOffset > marker.startOffset) {
             DocumentMarker newLeft = marker;
             newLeft.endOffset = startOffset;
